hotfix/MP-2930 merge_requests_record_access